# puredata

./: .gitignore  .pre-commit-config.yaml  ACADEMIC_MODULES_PLAN.md  DATA_FLOW.md  README.md  gen_data.py  generate.bat  generate.sh  kill3platformbackend  ourcesappoutvsworkbenchcontribterminalcommonscriptssafe_rm_aliases.ps1 } catch{} ; Write-Output [Trae CN] Safe Rm alias is not enabled, try to fix it now.  pyproject.toml  run.bat  run.py  start.bat  start_server.bat  system_scan_report_20260310_233220.txt  test_frontend_simulation.py  test_generate.py
.github/workflows/: ci.yml
outputs/: quality_test_100条_20260221_023459.json  test_100_20260221_023912.json
platform/: .env.example  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  nginx.conf  start.sh  start_cloud.sh  云端部署指南.md  使用指南.md
platform/backend/: .secret_key  API.md  CADS对抗合成.py  DASGen分布对齐生成.py  Dockerfile  FAC特征覆盖合成.py  README.md  academic_validation.py  admin_sessions.json  advanced_sampler.py  ai_data_pipeline.py  (+96 more)
tests/: README.md  check_api.py  check_data.py  check_encoding.py  check_files.py  check_final.py  check_result.py  check_size.py  check_v3.py  check_v4.py  test_all_domains.py  test_api.py  test_download.py  test_full_download.py  test_full_version.py  test_generate.py  test_hash.py  test_keywords.py  test_login.py  test_login_speed.py  test_quality.py  test_quick.py  test_quota.py  test_simple_login.py  test_system.py  verify_output.py
training_data/: ai_training.json  finance_test_20条.json  finance_training.json  medical_training.json
(+234 files in other folders)
